Fixing font's and cleanup.

--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[plainpages=false,pdfpagelabels,unicode]{hyperref}
+\usepackage{lmodern}
 
 \thesistitle{Rozšírenia typového systému pre Haskell}
 \thesissubtitle{Diplomová práca}
@@ -34,17 +35,17 @@ The aim of the bachelor work is to provide...
 keyword1, keyword2, etc.
 \end{ThesisKeyWords}
 
-\tableofcontents          % prints table of contents
+\tableofcontents
 
 \MainMatter
 
-\chapter{Introduction}    % first chapter followed by
-                          % many others
+\chapter{Introduction}
+Ľaľa ťapina tĺk ďateľ.
 
 \chapter{Another chapter}
-...
+\dots
 
-\bibliographystyle{plain} % sets plain bibliography style
-\bibliography{bib-db}     % BibTeX database file
+\bibliographystyle{plain}
+\bibliography{bib-db}
 
 \end{document}
