--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -5,14 +5,18 @@
 \usepackage[plainpages=false,pdfpagelabels,unicode]{hyperref}
 \usepackage{lmodern}
 
-\thesistitle{Rozšírenia typového systému pre Haskell}
-\thesissubtitle{Diplomová práca}
+%\thesistitle{Rozšírenia typového systému pre Haskell}
+\thesistitle{Extensions of Haskell type system}
+%\thesissubtitle{Diplomová práca}
+\thesissubtitle{Master Thesis}
 \thesisstudent{Matej Kollár}
 \thesiswoman{false}
 \thesisfaculty{fi}
-\thesisyear{jar 2011}
+%\thesisyear{jar 2011}
+\thesisyear{autumn 2011}
 \thesisadvisor{Libor Škarvada, RNDr.}
-\thesislang{sk}
+%\thesislang{sk}
+\thesislang{en}
 
 \begin{document}
 \FrontMatter
@@ -28,7 +32,7 @@ I would like to thank my supervisor...
 \end{ThesisThanks}
 
 \begin{ThesisAbstract}
-The aim of the bachelor work is to provide...
+The aim of the master work is to provide...
 \end{ThesisAbstract}
 
 \begin{ThesisKeyWords}
@@ -42,8 +46,40 @@ keyword1, keyword2, etc.
 \chapter{Introduction}
 Ľaľa ťapina tĺk ďateľ.
 
-\chapter{Another chapter}
+\chapter{Haskell type system}
+
+(Part of introduction?)\dots
+
+\section{aaa}
+
+A
+
+a
+
+a.
+
+\chapter{Extensions}
+
 \dots
+
+\section{Extension 1}
+
+\dots
+
+\section{Extension 2}
+
+\dots
+
+\section{Extension 3}
+
+some text..
+
+\chapter{Unified view}
+
+\chapter{Own extension}
+
+%\chapter{Z\'aver}
+\chapter{Conclusion}
 
 \bibliographystyle{plain}
 \bibliography{bib-db}
