Bibliography test + stuff.

--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -32,3 +32,9 @@
   publisher = {Oxford University Press},
 }
 
+@misc{haskell.org,
+  howpublished = {WWW},
+  title = {Haskell.org},
+  url = {http://haskell.org/},
+  note = {\url{http://haskell.org}}
+}
