--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -46,17 +46,13 @@ keyword1, keyword2, etc.
 \chapter{Introduction}
 Ľaľa ťapina tĺk ďateľ.
 
-\chapter{Haskell type system}
+\chapter{Type system}
 
 (Part of introduction?)\dots
 
-\section{aaa}
+\section{Haskell type system}
 
-A
-
-a
-
-a.
+\cite{haskell.org}
 
 \chapter{Extensions}
 
@@ -76,12 +72,14 @@ some text..
 
 \chapter{Unified view}
 
-\chapter{Own extension}
+\chapter{Own extension proposal}
 
 %\chapter{Z\'aver}
 \chapter{Conclusion}
 
+I came to conclusion that violet cows are present mainly in ads.
+
 \bibliographystyle{plain}
-\bibliography{bib-db}
+\bibliography{bibliography}
 
 \end{document}
