Cleanup + some improvements

--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -32,6 +32,14 @@
   publisher = {Oxford University Press},
 }
 
+@misc{haskell2010,
+  author = {Simon Marlow},
+  title = {Haskell 2010 Language Report},
+  year = {2010},
+  url = {www.haskell.org/definition/haskell2010.pdf},
+  note = {\url{www.haskell.org/definition/haskell2010.pdf}}
+}
+
 @misc{haskell.org,
   howpublished = {WWW},
   title = {Haskell.org},
