bit improvemets, some decisions changed

--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -9,7 +9,7 @@
 }
 
 @inbook{barendregt:1992:lambda,
-  author = {Barendregt, H. P.},
+  author = {Henk P. Barendregt},
   title = {Lambda calculi with types},
   book = {Handbook of logic in computer science (vol. 2)},
   year = {1992},
@@ -44,5 +44,12 @@
   howpublished = {WWW},
   title = {Haskell.org},
   url = {http://haskell.org/},
-  note = {\url{http://haskell.org}}
+  note = {\url{http://haskell.org}},
+  year = 2011
+}
+
+@misc{libor,
+  author = {Libor Škarvada},
+  howpublished = {Personal communication},
+  year = 2011
 }
