--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -47,7 +47,7 @@ Haskell, type system, type extension
 
 \chapter{Introduction}
 
-\cite{barendregt:1992:lambda}
+\cite{barendregt:1992:lambda, libor}
 
 \chapter{Type system}
 
@@ -61,17 +61,29 @@ Haskell, type system, type extension
 
 \dots
 
-\section{Extension 1}
+\section{Multiparametric type classes}
 
 \dots
 
-\section{Extension 2}
+\section{Generalised algebraic datatypes}
 
 \dots
 
-\section{Extension 3}
+\section{Extenzible kinds}
 
-some text..
+\dots
+
+\section{Subtyping}
+
+\dots
+
+\section{Extension n+1}
+
+\dots
+
+\section{Extension n+2}
+
+Some text\dots
 
 \chapter{Unified view}
 
