Added new extension.

--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -73,6 +73,14 @@ Haskell, type system, type extension
 
 \dots
 
+\section{Phantom types}
+
+\dots
+
+\section{Multiparametric type classes}
+
+\dots
+
 \section{Subtyping}
 
 \dots
