Extended info about edd.

--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -82,9 +82,14 @@ Haskell, type system, type extension
 
 \chapter{Extensions}
 
-\dots
+This chapters goes trough various type extensions showing examples
+what can be achieved using them with focus on what they have in common
+and where they differ.
 
 \section{Empty data declarations}
+
+This extension is implemented in \texttt{GHC} and can be enabled via
+\texttt{LANGUAGE} pragma \texttt{EmptyDataDecls}.
 
 Extension \emph{empty data declarations} allows empty data declarations
 (without any data constructors). This is very natural as there is possible
