--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -146,11 +146,35 @@ Now consider \(\texttt{emptyBad fac (fix EB)}\) and \(\texttt{emptyBad fac} \, \
 They are obviously distinguishable as first one is factorial function but second one is \(\bot\) itself.
 \end{proof}
 
+\subsection{Examples}
+
+Apples and oranges\dots
+
 % \section{Phantom types}
 
-\section{Multiparametric type classes}
+\section{Multi-parameter type classes}
 
-\section{Functional dependencies}
+\texttt{MultiParamTypeClasses}
+
+\subsection{Functional dependencies}
+
+\subsection{Relaxed rules for instances}
+
+\subsubsection{Relaxed rules for the instance head}
+
+\texttt{TypeSynonymInstances} Not much interesting.
+
+\subsubsection{Relaxed rules for instance contexts}
+
+\begin{itemize}
+\item \texttt{FlexibleContexts}
+\item \texttt{UndecidableInstances}
+\item \texttt{OverlappingInstances} \texttt{IncoherentInstances}
+\end{itemize}
+
+\subsection{Examples}
+
+Subtyping.
 
 \section{Generalised algebraic datatypes}
 
@@ -160,7 +184,7 @@ They are obviously distinguishable as first one is factorial function but second
 
 \subsection{Rank-n types}
 
-\section{Subtyping}
+% \section{Subtyping} % as example
 
 \chapter{Unified view}
 
