Bibtex update - Type-Level Instant Insanity.

--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -1,11 +1,11 @@
 @book{pierce:2002:types,
-  title={{Types and programming languages}},
-  author={Pierce, B.C.},
-  isbn={9780262162098},
-  lccn={2001044428},
-  url={http://www.google.com/books?id=ti6zoAC9Ph8C},
-  year={2002},
-  publisher={MIT Press}
+  title = {{Types and programming languages}},
+  author = {Pierce, B.C.},
+  isbn = {9780262162098},
+  lccn = {2001044428},
+  url = {http://www.google.com/books?id=ti6zoAC9Ph8C},
+  year = {2002},
+  publisher = {MIT Press}
 }
 
 @inbook{barendregt:1992:lambda,
@@ -53,3 +53,14 @@
   howpublished = {Personal communication},
   year = 2011
 }
+
+@article{parker:tlii,
+  Author = {Conrad Parker},
+  Journal = {The Monad.Reader},
+  Month = {September},
+  Title = {{Type-Level Instant Insanity}},
+  Volume = {Issue Eight},
+  Year = {2007},
+  url = {http://www.haskell.org/wikiupload/d/dd/TMR-Issue8.pdf}
+}
+
