--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -154,7 +154,8 @@ Apples and oranges\dots
 
 \section{Multi-parameter type classes}
 
-\texttt{MultiParamTypeClasses}
+This extension is implemented in \texttt{GHC} and can be enabled via
+\texttt{LANGUAGE} pragma \texttt{MultiParamTypeClasses}.
 
 \subsection{Functional dependencies}
 
