--- a/text/mgr-thesis.tex
+++ b/text/mgr-thesis.tex
@@ -76,17 +76,40 @@ Haskell, type system, type extension
 
 (Part of introduction?)\dots
 
-As you can find not only \cite{haskell2010}, Haskell uses a traditional
+As one can find not only \cite{haskell2010}, Haskell uses a traditional
 Hindley-Milner polymorphic type system to provide a static type
 semantics enriched with type classes that provide structural way to
 introduce overloaded functions.
 
 Contexts ... blah blah... much better solution -- watch this:
 \begin{align*}
-	\tau   & ::= \forall a \in \kappa . \tau \| \sigma \\
-	\sigma & ::= a \| \sigma \rightarrow \sigma | \rho \sigma
-	\rho   & ::= a \| \rho \sigma
+	\tau   & ::= \forall \, a{\in}\kappa \, . \, \tau ~|~ \sigma \\
+	\sigma & ::= a ~|~ \sigma \rightarrow \sigma ~|~ \rho \sigma \\
+	\rho   & ::= a ~|~ \rho \sigma \\
+	\kappa & ::= c ~|~ \star ~|~ \kappa \rightarrow \kappa ~|~ \kappa \cap \kappa \\
 \end{align*}
+where
+\begin{itemize}
+	\item \(a\) stands for type variable,
+	\item \(c\) stands for kind constant,
+	\item \(\tau\) represents types,
+	\item and \(\kappa\) represents types kinds.
+\end{itemize}
+
+Key in understanding this fact (noticed by \cite{libor}),
+that as classes are sets of type constructors, they are kinds.
+Not only that, they form obvious structure -- half lattice with operation
+\(\cap\).
+
+Defining classes creates new kind constants, instances fills them.
+
+Intersection have sense (understand possibility of not-emptiness) only
+on kinds with same sort (\(\texttt{Eq} \cap \texttt{Functor}\) feels wrong
+on first sight).
+
+%XXX: Eventually remove this text and if possible replace
+%     with 15 pages of text ;-).
+This was expected to generate like 15 pages in thesis \verb~:-/~.
 
 \section{Haskell type system}
 
