--- a/text/bibliography.bib
+++ b/text/bibliography.bib
@@ -64,3 +64,17 @@
   url = {http://www.haskell.org/wikiupload/d/dd/TMR-Issue8.pdf}
 }
 
+@article{typeclassopedia,
+  title = {{Typeclassopedia}},
+  author = {Yorgey, Brent},
+  editor = {Swierstra, Wouter},
+  journal = {The Monad.Reader},
+  keywords = {haskell, type\_classes},
+  year = {2009},
+  month = mar,
+  day = {12},
+  number = {13},
+  pages = {17--68},
+  url = {http://www.haskell.org/wikiupload/8/85/TMR-Issue13.pdf}
+}
+
